objects/Student_Behavior__c.object
<CustomObject>
    <fields>
        <fullName>Behavior_Incident__c</fullName>
        <label>Behavior Incident</label>
        <referenceTo>Behavior_Incident__c</referenceTo>
        <relationshipLabel>Student</relationshipLabel>
        <relationshipName>Student_Behavior</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Behavior_Weighting__c</fullName>
        <label>Behavior Weighting</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Consequence_Time_Lost__c</fullName>
        <label>Consequence Time Lost</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Student/Behavior</relationshipLabel>
        <relationshipName>Student_Behavior</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Family_Contacted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Family Contacted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Final_Consequence_Weighting__c</fullName>
        <label>Final Consequence Weighting</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Incident_Role__c</fullName>
        <label>Student Role</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Instigator</fullName>
                    <default>true</default>
                    <label>Instigator</label>
                </value>
                <value>
                    <fullName>Victim</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reporting_Reference__c</fullName>
        <description>To create unique key to enable BI Reporting to be calculated</description>
        <label>Reporting Reference</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Student__c</fullName>
        <label>Student</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Student__c.Active__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Student__c</referenceTo>
        <relationshipLabel>Behavior</relationshipLabel>
        <relationshipName>Student_Behavior</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Student_s_Grade__c</fullName>
        <description>Used for generating the Unique Reference Reporting Key</description>
        <formula>TEXT(Student__r.Grade__c)</formula>
        <label>Student&apos;s Grade</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Time_Lost__c</fullName>
        <formula>Consequence_Time_Lost__c +  Behavior_Incident__r.Addl_Educational_Time_Lost__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Instructional Time Lost</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Type_Of_Contact__c</fullName>
        <label>Type Of Contact</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Conference/Mtng</fullName>
                </value>
                <value>
                    <fullName>Failed Attempt</fullName>
                </value>
                <value>
                    <fullName>In-Person (Unscheduled)</fullName>
                </value>
                <value>
                    <fullName>None (No Attempt)</fullName>
                </value>
                <value>
                    <fullName>Note/Email to Parent</fullName>
                </value>
                <value>
                    <fullName>Phone Call with Parent</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Student/Behavior</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Behavior_Incident__c</columns>
        <columns>Family_Contacted__c</columns>
        <columns>Incident_Role__c</columns>
        <columns>Student__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>SB-{000000}</displayFormat>
        <label>Student/Behavior</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Student/Behavior</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>