objects/Student_Behavior__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Behavior_Incident__c</columns>
    <columns>Family_Contacted__c</columns>
    <columns>Incident_Role__c</columns>
    <columns>Student__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>